manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-together
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: finance-together
