manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-together-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - finance-together.edwinsaucedo.me
    secretName: finance-together-tls
  rules:
  - host: finance-together.edwinsaucedo.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-together
            port:
              number: 80
